@@ -78,7 +78,7 @@ public:
   int unbind (const ACE_NS_WString &name_in);
 
   /// Get value and type of a given name binding (Wide chars).  The
-  /// caller is responsible for deleting both <value_out> and <type_out>!
+  /// caller is responsible for deleting both @a value_out and @a type_out!
   int resolve (const ACE_NS_WString &name_in,
                ACE_NS_WString &value_out,
                char *&type_out);
