@@ -88,7 +88,7 @@ public:
 
   /**
    * Try to acquire the distributed token.  If the token is already
-   * held, the call returns without queueing the caller as a waiter.
+   * held, the call returns without queuing the caller as a waiter.
    * Returns 0 on success (the token was acquired), and -1 with
    * EWOULDBLOCK if the token was already held.
    */
@@ -98,7 +98,7 @@ public:
    * Renew the token by offering to release it if there are any other
    * waiters, otherwise get the token back immediately.  This renew
    * has the same semantics as ACE_Local_Mutex release.  It is
-   * semantically equivalent to <release> followed by <acquire>, but
+   * semantically equivalent to release() followed by acquire(), but
    * it is faster.  options contains the timeout value used if renew
    * blocks.  As with acquire, the timer is maintained at the token
    * server.  If there are waiters and requeue_position == -1, the
@@ -287,7 +287,7 @@ public:
   /// Factory Method that creates a new SOCK Stream.
   virtual ACE_SOCK_Stream *make_TSS_TYPE (void) const;
 
-  /// Inheritence and operator overloading don't mix.  Redefine this
+  /// Inheritance and operator overloading don't mix.  Redefine this
   /// from ACE_TSS so that we can use it.
   operator ACE_SOCK_Stream *(void);
 
